<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmcl_examples_micpl</name>
    <version>2.2.0</version>
    <description>The rmcl_examples_micpl package</description>

    <maintainer email="amock@uos.de">Alexander Mock</maintainer>

    <license>BSD</license>
    <author email="amock@uos.de">Alexander Mock</author>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <exec_depend version_gte="2.2.0">rmcl_ros</exec_depend>
    <exec_depend version_gte="2.2.0">rmcl_msgs</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
